--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <inceptionYear>2013</inceptionYear>
     
     <scm>
-    	<url></url>
+    	<url>https://github.com/danielme-com/tip-Struts-2--02-multiple-file-upload</url>
     </scm>
     
     <licenses>
